--- a/index.html
+++ b/index.html
@@ -11,3 +11,8 @@
 	<div class="navber">
 		<img src="1.png" alt="" class="logo" width="200" height="200">
 		<ul>
+			<li><a href="#">ANASAYFA</a></li>
+            <li><a href="hesaplar.html">HESAPLAR</a></li>
+         
+		</ul>
+	</div>
