--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="1.png" alt="" class="logo" width="200" height="200">
 		<ul>
 			<li><a href="#">ANASAYFA</a></li>
-            <li><a href="hesaplar.html">HESAPLAR</a></li>
+            <li><a href="hesaplar.html">PROJELERİMİZ</a></li>
          
 		</ul>
 	</div>
