--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<ul>
 			<li><a href="#">ANASAYFA</a></li>
             <li><a href="hesaplar.html">PROJELERİMİZ</a></li>
+			
+			<li><a href="bizkimiz.html">BİZKİMİZ</a></li>
          
 		</ul>
 	</div>
